feat: project slider

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -543,3 +543,7 @@ body {
     transform: translateX(calc(-100% - 2rem));
   }
 }
+
+.swiper-button-prev, .swiper-button-next {
+  color: rebeccapurple !important;
+}
