--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,20 +53,29 @@ body {
   background-blend-mode: hard-light;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
+}
+input[data-autocompleted] {
+    background-color: transparent !important;
+}
+
+
 .bg-abs {
   position: absolute;
   width: 100%;
   height: 100%;
-  margin-top: -72px;
+  margin-top: -52px;
   /* Add any other styling for the .bg-2 element */
-  background-color: #040105;
+  background-color: #0a0305;
   z-index: -1;
 }
 
 .bg-abs::before {
   content: "";
   position: absolute;
-  background-color: #040105;
+  background-color: #0a0305;
   top: 0;
   left: 0;
   width: 100%;
@@ -74,7 +83,7 @@ body {
   background-size: 200% 100%;
   background-position: center;
   background-repeat: no-repeat;
-  background-blend-mode: hard-light;
+  background-blend-mode: soft-light;
 }
 
 .no-scroll {
@@ -545,5 +554,5 @@ body {
 }
 
 .swiper-button-prev, .swiper-button-next {
-  color: rebeccapurple !important;
+  color: #490e1f !important;
 }
